--- a/styles.css
+++ b/styles.css
@@ -28,26 +28,38 @@ body {
     height: 300px;
     width: 300px;
     border-radius: 20px;
-    margin: auto;
+    margin: 200px auto 32px auto;
 }
 
-.main-container img{
+.icon-container{
+    margin: 28px auto 0 20px;
+    background-color: var(--dark-blue-transparency);
+    height: 40px;
+    width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border-radius: 50%;
+}
+
+.icon-container img{
     width: 14px;
     height: 14px;
-    margin: 28px auto 0 20px;
+    border-radius: 50%;
+    background-size: 50%;
 }
 
 /* TEXTOS */
 .question{
     font-size: var(--title);
-    margin: 40px auto 8px 20px;
+    margin: 20px auto 8px 20px;
     font-weight: bold;
     color: var(--white);
 }
 
 .comment{
     font-size: var(--md);
-    margin: 8px 8px 20px 20px;
+    margin: 4px 8px 20px 20px;
     color: var(--light-grey);
 }
 
@@ -56,7 +68,7 @@ body {
     display: grid;
     grid-template-columns: 54px 54px 54px 54px 54px;
     justify-items: center;
-    margin: 0 0 24px 0;
+    margin: 0 0 22px 0;
 }
 .rate-button{
     font-size: var(--md);
@@ -75,9 +87,29 @@ body {
     color: var(--white);
 }
 
-.rate-button:visited{
+.rate-button:focus{
+    /* Focus se usa para que al darle click al boton se quede con el otro estilo */
     background-color: var(--light-grey);
     color: var(--white);
+}
+
+.submit{
+    background-color: var(--orange);
+    border-radius: 20px;
+    height: 36px;
+    width: 85%;
+    border: none;
+    margin: 0 auto;
+    color: var(--white);
+    font-size: 10px ;
+    font-weight: bold;
+    text-align: center;
+    cursor: pointer;
+}
+
+.submit:hover{
+    background-color: var(--white);
+    color: var(--orange);
 }
 
 /* LINKS */
